# CompFlowCalc

./: ExpansionWaveRatio.8xp  HW10.ipynb  HW11.ipynb  HW12.ipynb  HW8.ipynb  HW9.ipynb  IsentropicExpansion.8xp  README.md  ShockPolar.ipynb  __init__.py  pyproject.toml  pytranspile.ipynb
CalculatorScripts/: BetaInvOblShock.8xp  ExpansionWave.8xp  InversePrandtlMeyer.8xp  IsentropicStag.8xp  NormalShock.8xp  ObliqueShock.8xp  PrandtlMeyerNu.8xp
src/compressible_flow_calculator/: __init__.py
