[project]
name = "compressible_flow_calculator_Willmac16"
version = "0.0.1"
authors = [
  { name="Will MacCormack", email="me@willmac.xyz" },
]
description = "Shock Waves and Other Calculations for Compressible Fluid Flow"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "numpy",
  "scipy",
]

[project.urls]
Homepage = "https://github.com/Willmac16/CompFlowCalc"
Issues = "https://github.com/Willmac16/CompFlowCalc/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
